# simplesp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compiletest.cpp  simplesp.h
cmake/: CMakeUtils.txt  FindGLFW.cmake  FindSIMPLESP.cmake
data/: .gitignore
sample/: CMakeLists.txt  cmake_base.txt  cmake_devel.txt  cmake_imgui.txt  cmake_tinyfd.txt
sample/_devel/: CMakeLists.txt
sample/_devel/bitmarker/: CMakeLists.txt  bitmarker.cpp  bitmarker.h  main.cpp
sample/_devel/calibration/: CMakeLists.txt  main.cpp
sample/_devel/cvcalib/: CMakeLists.txt  main.cpp
sample/_devel/cvmat/: CMakeLists.txt  main.cpp
sample/_devel/dotmarker/: CMakeLists.txt  dotmarker.cpp  dotmarker.h  main.cpp
sample/_devel/equation/: CMakeLists.txt  main.cpp
sample/_devel/feature/: CMakeLists.txt  main.cpp  testfeature.h
sample/_devel/file/: CMakeLists.txt  main.cpp
sample/_devel/geom/: CMakeLists.txt  main.cpp
sample/_devel/glew/: CMakeLists.txt  main.cpp
sample/_devel/glfw/: CMakeLists.txt  main.cpp
sample/_devel/print/: CMakeLists.txt  main.cpp
sample/_devel/realsense/: CMakeLists.txt  main.cpp
sample/_devel/realsense2/: CMakeLists.txt  main.cpp
sample/_devel/sift/: CMakeLists.txt  main.cpp  sift.h
sample/_devel/sim/: CMakeLists.txt  main.cpp
sample/_devel/testcore/: CMakeLists.txt  main.cpp
sample/cv/: CMakeLists.txt
sample/cv/bitmarker/: CMakeLists.txt  main.cpp
sample/cv/bitmarker_neko/: CMakeLists.txt  main.cpp
sample/cv/calibration/: CMakeLists.txt  main.cpp
sample/cv/capture/: CMakeLists.txt  main.cpp
sample/cv/dotmarker/: CMakeLists.txt  main.cpp
sample/cv/dotpattern/: CMakeLists.txt  main.cpp
sample/cv/harris/: CMakeLists.txt  main.cpp
sample/cv/opticalflow/: CMakeLists.txt  main.cpp
sample/cv/viewtrack/: CMakeLists.txt  main.cpp
sample/gl/: CMakeLists.txt
sample/gl/activestereo/: CMakeLists.txt  activestereo.h  main.cpp
sample/gl/bvh/: CMakeLists.txt  main.cpp
sample/gl/graycode/: CMakeLists.txt  graycode.h
sample/gl/gtmaker/: CMakeLists.txt  gtmaker.h  gtutil.h  rectmode.h
sample/gl/icp/: CMakeLists.txt  icp.h  main.cpp
sample/gl/imgui/: CMakeLists.txt  main.cpp  sample.h
sample/gl/kalmanfilter/: CMakeLists.txt  kalmanfilter.h  main.cpp
sample/gl/kinectfusion/: CMakeLists.txt  kinectfusion.h  main.cpp
sample/gl/kmeans/: CMakeLists.txt  kmeans.h  main.cpp
sample/gl/modeltrack/: CMakeLists.txt  main.cpp  modeltrack.h
sample/gl/multicam/: CMakeLists.txt  main.cpp
sample/gl/pathtracing/: CMakeLists.txt  main.cpp
sample/gl/randomdot/: CMakeLists.txt  main.cpp
sample/gl/render/: CMakeLists.txt  main.cpp  render.h
sample/gl/sfm/: CMakeLists.txt  main.cpp
sample/gl/shader/: CMakeLists.txt  edge.frag  edge.vert  main.cpp
sample/gl/slic/: CMakeLists.txt  main.cpp
sample/gl/track3d/: CMakeLists.txt  main.cpp
sample/gl/visualhull/: CMakeLists.txt  main.cpp
sample/gl/voxel/: CMakeLists.txt  main.cpp  voxel.h
sample/py/mnist/: dcgan.py  simple_cnn.py
sample/py/vgg/: vgg.py
sample/sp/: CMakeLists.txt
sample/sp/backsub/: CMakeLists.txt  main.cpp
sample/sp/beliefpropagation/: CMakeLists.txt  main.cpp
sample/sp/binarization/: CMakeLists.txt  main.cpp
sample/sp/calibration/: CMakeLists.txt  main.cpp
sample/sp/code/: CMakeLists.txt  main.cpp
sample/sp/coding/: CMakeLists.txt  main.cpp
sample/sp/contour/: CMakeLists.txt  main.cpp
sample/sp/corner/: CMakeLists.txt  main.cpp
sample/sp/filter/: CMakeLists.txt  main.cpp
sample/sp/fmat/: CMakeLists.txt  main.cpp
sample/sp/fourier/: CMakeLists.txt  main.cpp
sample/sp/graphcut/: CMakeLists.txt  main.cpp
sample/sp/hmat/: CMakeLists.txt  main.cpp
sample/sp/huffman/: CMakeLists.txt  main.cpp
sample/sp/imgproc/: CMakeLists.txt  main.cpp
sample/sp/integral/: CMakeLists.txt  main.cpp
sample/sp/kdtree/: CMakeLists.txt  main.cpp
sample/sp/lsm/: CMakeLists.txt  main.cpp
sample/sp/mat/: CMakeLists.txt  main.cpp
sample/sp/math/: CMakeLists.txt  main.cpp
sample/sp/opticalflow/: CMakeLists.txt  main.cpp
sample/sp/pca/: CMakeLists.txt  main.cpp
sample/sp/pnp/: CMakeLists.txt  main.cpp
sample/sp/poc/: CMakeLists.txt  main.cpp
sample/sp/pose/: CMakeLists.txt  main.cpp
sample/sp/randomforest/: CMakeLists.txt  main.cpp
sample/sp/rect/: CMakeLists.txt  main.cpp
sample/sp/rectification/: CMakeLists.txt  main.cpp
sample/sp/robotcam/: CMakeLists.txt  main.cpp
sample/sp/rot/: CMakeLists.txt  main.cpp
sample/sp/sfm/: CMakeLists.txt  main.cpp
sample/sp/sift/: CMakeLists.txt  main.cpp
sample/sp/slic/: CMakeLists.txt  main.cpp
sample/sp/stereo/: CMakeLists.txt  main.cpp
sample/sp/train/: CMakeLists.txt  main.cpp
sample/sp/warp/: CMakeLists.txt  main.cpp
sample/xx/: CMakeLists.txt
sample/xx/dotmarker/: CMakeLists.txt  dotmarker.h  main.cpp
sample/xx/gtmaker/: CMakeLists.txt  gtcont.cpp  gtmaker.cpp  gtmaker.h  gtordr.cpp  gtrect.cpp  gtutil.h  main.cpp  rectmode.h
sample/xx/kinectfusion/: CMakeLists.txt  kinectfusion.h  main.cpp
sample/xx/mmd/: CMakeLists.txt  main.cpp  mmd.h  saba.h
sample/xx/realsense/: CMakeLists.txt  main.cpp  rscapture.h
sample/xx/sfm/: CMakeLists.txt  main.cpp  sfm.h
sample/xx/slam/: CMakeLists.txt  main.cpp
(+155 files in other folders)
