add_subdirectory(render)
add_subdirectory(shader)
add_subdirectory(imgui)
add_subdirectory(icp)
add_subdirectory(kmeans)
add_subdirectory(kalmanfilter)
add_subdirectory(kinectfusion)
add_subdirectory(activestereo)
add_subdirectory(randomdot)
add_subdirectory(modeltrack)
add_subdirectory(voxel)
add_subdirectory(visualhull)
add_subdirectory(slic)
add_subdirectory(track3d)
