## algo
add_subdirectory(math)
add_subdirectory(rot)
add_subdirectory(lsm)
add_subdirectory(pca)
add_subdirectory(kdtree)
add_subdirectory(randomforest)
add_subdirectory(graphcut)
add_subdirectory(beliefpropagation)
add_subdirectory(huffman)

## image
add_subdirectory(imgproc)
add_subdirectory(corner)
add_subdirectory(sift)
add_subdirectory(poc)
add_subdirectory(opticalflow)
add_subdirectory(contour)
add_subdirectory(warp)
##add_subdirectory(backsub)

## geom
add_subdirectory(pose)
add_subdirectory(calibration)
add_subdirectory(hmat)
add_subdirectory(fmat)
add_subdirectory(rectification)
add_subdirectory(stereo)
add_subdirectory(robotcam)

## learn
add_subdirectory(train)


